# apriltag_ros

./: .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  LICENSE  README.md
.github/: build_and_test.yml
.github/workflows/: ros_ci.yml
apriltag_msgs/: CMakeLists.txt  package.xml
apriltag_msgs/srv/: AnalyzeSingleImage.srv
apriltag_ros/: CHANGELOG.rst  CMakeLists.txt  package.xml
apriltag_ros/config/: cameras.yaml  params.yaml  settings.param.yaml  settings.yaml  tags.param.yaml  tags.yaml
apriltag_ros/include/apriltag_ros/: common_functions.h  common_functions.hpp  composition_visibility.h  continuous_detector.h  continuous_detector.hpp  single_image_detector.hpp  tag_bundle_calibration.h
apriltag_ros/launch/: calibration_bundle.launch  continuous_detection.launch  continuous_detection.launch.xml  launch.py  launch_continuous.py  launch_single.py  single_image_client.launch.xml  single_image_client_launch.py  single_image_detector.launch.xml  single_image_server_launch.py  tag_bundle_calibration.launch
apriltag_ros/msg/: AprilTagDetection.msg
apriltag_ros/scripts/: analyze_image
apriltag_ros/src/: apriltag_ros_calibration_bundle.cpp  apriltag_ros_continuous_node.cpp  apriltag_ros_single_image_client_node.cpp  apriltag_ros_single_image_server_node.cpp  apriltag_ros_tag_bundle_calibration_node.cpp  common_functions.cpp  continuous_detector.cpp  single_image_client.cpp  single_image_detector.cpp  tag_bundle_calibration.cpp
apriltag_ros/srv/: AnalyzeSingleImage.srv
apriltag_ros_interfaces/: CMakeLists.txt  package.xml
apriltag_ros_interfaces/srv/: AnalyzeSingleImage.srv
apriltags2/: CMakeLists.txt  package.xml
apriltags2/include/: tag36h9.h
apriltags2/include/apriltags2/: apriltag.h
apriltags2/include/common/: homography.h  image_types.h  matd.h
apriltags2/src/: homography.c  image_f32.c  tag36h9.c
apriltags2_msgs/: CMakeLists.txt  package.xml
apriltags2_msgs/msg/: AprilTagDetection.msg  AprilTagDetectionPoseArray.msg  AprilTagFamily.msg  Matrix.msg
apriltags2_msgs/srv/: AnalyzeSingleImage.srv
apriltags2_ros/: CMakeLists.txt  nodelet_plugins.xml  package.xml
apriltags2_ros/config/: apriltags2_parameters.xml  common_parameters.xml  darpa_settings.yaml  darpa_tags.yaml  settings.yaml  tags.yaml  tags_mania.yaml
apriltags2_ros/include/apriltags2_ros/: apriltag_detection_transform.h  common_functions.h  common_header.h  continuous_detector.h  continuous_pose_detector.h  single_image_detector.h  standalone_tag_description.h  tag_bundle_description.h  tag_bundle_member.h  tag_detector.h  tag_settings.h
apriltags2_ros/launch/: arl_blackfly_continuous_detection.launch  arl_continuous_detection.launch  arl_ptgrey_continuous_detection.launch  continuous_detection.launch  continuous_pose_detection.launch  continuous_pose_detection_accelerated.launch  continuous_test.launch  continuous_vicon_test.launch  debug_quaternion_jump.launch  single_image_client.launch  single_image_server.launch
apriltags2_ros/msg/: AprilTagDetection.msg  ZArray.msg
apriltags2_ros/scripts/: analyze_image.sh  calibrate_bundle.m
apriltags2_ros/src/: apriltags2_ros_continuous_node.cpp  apriltags2_ros_single_image_client_node.cpp  apriltags2_ros_single_image_server_node.cpp  common_functions.cpp  continuous_detector.cpp  continuous_detector_node.cpp  continuous_node.cpp  continuous_pose_detector.cpp  continuous_pose_detector_node.cpp  continuous_publisher_node.cpp  single_image_client_node.cpp  single_image_detector.cpp  single_image_server_node.cpp  tag_detector.cpp  tag_settings.cpp
apriltags2_ros/srv/: AnalyzeSingleImage.srv  RemoveBundle.srv  UpdateBundle.srv
