<?xml version="1.0"?>
<package format="2">
  <name>apriltag_ros</name>
  <version>3.2.1</version>
  <description>
    A ROS wrapper of the AprilTag 3 visual fiducial detection
    algorithm. Provides full access to the core AprilTag 3 algorithm's
    customizations and makes the tag detection image and detected tags' poses
    available over ROS topics (including tf). The core AprilTag 3 algorithm is
    extended to allow the detection of tag bundles and a bundle calibration
    script is provided (bundle detection is more accurate than single tag
    detection). Continuous (camera image stream) and single image detector nodes
    are available.
  </description>

  <maintainer email="danylo.malyuta@gmail.com">Danylo Malyuta</maintainer>
  <maintainer email="w.merkt+oss@gmail.com">Wolfgang Merkt</maintainer>

  <author>Danylo Malyuta</author>

  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/apriltag_ros</url>
  <url type="bugtracker">https://github.com/AprilRobotics/apriltag_ros/issues</url>
  <url type="repository">https://github.com/AprilRobotics/apriltag_ros</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>apriltag</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>image_geometry</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf</depend>
  <depend>nodelet</depend>
  <depend>pluginlib</depend>
  <depend>eigen</depend>
  <depend>libopencv-dev</depend>
  <depend>cmake_modules</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
