<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>apriltag_ros</name>
  <version>0.0.0</version>
  <description>utils package</description>
  <maintainer email="support.idi@movvo.eu">
        AlbertArla, 
        MartiBolet,
        BernatGaston,
        MariaMercade
  </maintainer>

  <license>Proprietary MOVVO ROBOTICS. All rights reserved</license> 
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>ageve_interfaces</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>rcutils</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>apriltag</depend>
  <depend>eigen</depend>
  <depend>OpenCV</depend>
  <depend>image_geometry</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>