<?xml version="1.0"?>
<package>
  <name>apriltags2</name>
  <version>0.9.8</version>
  <description>
    A catkinized version of the exact C code for AprilTags 2 algorithm
    (version 2016-12-01 (0.9.8))
  </description>

  <maintainer email="danylo.malyuta@gmail.com">Danylo Malyuta</maintainer>
  
  <author email="danylo.malyuta@gmail.com">Danylo Malyuta</author>

  <license>BSD</license>

  <url type="website">https://april.eecs.umich.edu/software/apriltag.html</url>

  <buildtool_depend>catkin</buildtool_depend>
</package>
