<?xml version="1.0"?>
<package>
  <name>apriltags2_ros</name>
  <version>0.0.1</version>
  <description>A ROS wrapper of the AprilTags 2 algorithm</description>

  <maintainer email="danylo.malyuta@gmail.com">Danylo Malyuta</maintainer>
  <author>Danylo Malyuta</author>

  <license>MIT</license>

  <url type="website">https://april.eecs.umich.edu/software/apriltag.html</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>apriltags2</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>cmake_modules</build_depend>
  
  <run_depend>tf</run_depend>
  <run_depend>apriltags2</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>libopencv-dev</run_depend>
  
</package>
